--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -263,9 +263,12 @@ alloy-selectthumbrating-general=The [vdldoc:alloy:thumbRating:value] of the comp
 alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
 alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
-alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
+alloy-tabview-dynamic-tabs=Tabs can be rendered *dynamically* by setting the [vdldoc:alloy:tab:rendered] attribute of each [vdldoc:alloy:tab] child. 
 alloy-tabview-selected-tab=The [vdldoc:alloy:tabView:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-tabview-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tabview.TabViewTabEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:tabView:tabEventListener] attribute.
+alloy-tabview-wizard=The component can act like a step-by-step *wizard* by controlling the [vdldoc:alloy:tabView:selectedIndex] attribute of the [vdldoc:alloy:tabView] and the [vdldoc:alloy:tab:disabled] attribute of each [vdldoc:alloy:tab] child.
+answer-at-stackoverflow=answer at stackoverflow
 append-new-files=Append New Files
 attribute-value=Attribute Value
 back-to-navigation-with=Back to Navigation with
@@ -311,6 +314,7 @@ description=Description
 default=Default
 default-value=Default Value
 dislike=Dislike
+dynamic-tabs=Dynamic Tabs
 error=Error
 example=Example
 expand-all=Expand All
@@ -323,6 +327,7 @@ general=General
 h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component for JSF 2.2+ that renders an `&lt;input&gt;` element with `type="file"`.
 h-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
 h-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
+has-compatibility-issues-with-jsf-22-file-upload-for-more-information-see-this=has compatibility issues with JSF 2.2 file upload. For more information see this
 header-text=Header Text
 hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
@@ -352,6 +357,7 @@ modules=Modules
 multiple-panes=Multiple Panes
 multiple-selection=Multiple Selection
 navigation=Navigation
+next=Next
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
 note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
@@ -389,6 +395,9 @@ server-events=Server Events
 size=Size
 small=Small
 source-code=Source Code
+step-1=Step 1
+step-2=Step 2
+step-3=Step 3
 sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-and-re-render-field=Submit and Re-Render Field
@@ -428,5 +437,6 @@ vdl-documentation=VDL Documentation
 view-params=View Params
 vertical-layout=Vertical Layout
 warning=Warning
-which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century? 
 when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
+which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century? 
+wizard=Wizard
