--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -17,7 +17,11 @@ alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outpu
 alloy-button-general-example-1=Styling via children
 alloy-button-general-example-2=Styling via [vdldoc:alloy:button:image] attribute
 alloy-button-general-example-3=Styling via [vdldoc:alloy:button:value] attribute
-alloy-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:button:outcome] attribute. Setting [vdldoc:alloy:link:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
+alloy-button-menu=There are different ways to style the menus
+alloy-button-menu-example-1=Styling sub-menus via the [vdldoc:alloy:menu:label] attribute
+alloy-button-menu-example-2=Styling sub-menus via the [vdldoc:f:facet] tag
+alloy-button-menu-example-3=Styling the button with [vdldoc:f:facet]
+alloy-button-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:button:outcome] attribute. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:alloy:button:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.CommandButton] is a [javadoc:javax.faces.component.UICommand] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:commandButton:type] is `submit`. Since it extends [javadoc:javax.faces.component.html.HtmlCommandButton], it supports all the features of [vdldoc:h:commandButton]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:alloy:commandButton:action] or [vdldoc:alloy:commandButton:actionListener].
@@ -26,6 +30,10 @@ alloy-commandbutton-general-example-1=Styling via children
 alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandButton:image] attribute
 alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandButton:value] attribute
 alloy-commandbutton-immediate=When the [vdldoc:alloy:commandButton:immediate] attribute is `true`, the [vdldoc:alloy:commandButton:action] and [vdldoc:alloy:commandButton:actionListener] callbacks execute during the *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal INVOKE_APPLICATION phase.
+alloy-commandbutton-menu=There are different ways to style the menus
+alloy-commandbutton-menu-example-1=Styling sub-menus via the [vdldoc:alloy:menu:label] attribute
+alloy-commandbutton-menu-example-2=Styling sub-menus via the [vdldoc:f:facet] tag
+alloy-commandbutton-menu-example-3=Styling the button with [vdldoc:f:facet]
 alloy-commandbutton-navigation=The component can be used to *navigate* between pages with the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `&lt;redirect&gt;` element in the `navigation-rule`, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
@@ -298,6 +306,7 @@ copy-1234-to-the-value-of-the-hidden-input=Copy '1234' to the value of the hidde
 copy-a-date-to-the-value-of-the-hidden-input=Copy a date to the value of the hidden input
 copy-a-valid-email-address-to-the-hidden-input=Copy a valid email address to the hidden input
 copy-an-invalid-email-address-to-the-hidden-input=Copy an invalid email address to the hidden input
+completed-orders=Completed Orders
 component=Component
 conversion=Conversion
 conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
@@ -313,8 +322,13 @@ date-pattern=Date Pattern
 description=Description
 default=Default
 default-value=Default Value
+delete=Delete
+disable=Disable
 dislike=Dislike
+drop-down=Dropdown
 dynamic-tabs=Dynamic Tabs
+edit=Edit
+enable=Enable
 error=Error
 example=Example
 expand-all=Expand All
@@ -333,6 +347,7 @@ hidden-field=Hidden Field
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 immediate=Immediate
 i-agree-to-the-terms-of-the-license-agreement=I agree to the terms of the license agreement
+in-store=In-Store
 info=Info
 input=Input
 instant-ajax=Instant Ajax
@@ -345,6 +360,7 @@ link-to-a-map-of=Link to a map of
 locale-from-el=locale from EL
 localization=Localization
 max-length-events=Max Length Events
+menu=Menu
 message-styling=Message Styling
 min-max-date=Min/Max Date
 mini=Mini
@@ -361,6 +377,8 @@ next=Next
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
 note-multiple-selection-not-available-for-inputdate=*Note:* Multiple selection is not available for [vdldoc:alloy:inputDate].
+online=Online
+open-orders=Open Orders
 output=Output
 panel=Panel
 param=Param
@@ -382,6 +400,7 @@ position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
 preview=Preview
 progress=Progress
+purchases=Purchases
 rating=Rating
 redisplay=Redisplay
 rendered=Rendered
@@ -423,6 +442,7 @@ text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
 usage=Usage
+user=User
 valid-date-range=Valid Date Range
 validating-an-email-address-using-validator-attribute=Validating an *email address* using the [vdldoc:alloy:inputTextarea:validator] attribute
 validating-an-email-address-using-f-validateregex=Validating an *email address* using an [vdldoc:f:validateRegex] child tag
