--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -25,6 +25,7 @@ output_alloy_outputLink=general:outputLink.xhtml|conversion:outputLink.xhtml,Out
 output_alloy_outputProgress=general:outputProgress.xhtml
 output_alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 output_alloy_outputScript=general:outputScript.xhtml|resource:outputScript.xhtml,example.js|modules:outputScript.xhtml
+output_alloy_outputStylesheet=general:outputStylesheet.xhtml,example-resource.css
 output_alloy_outputText=general:outputText.xhtml,OutputTextModelBean.java|conversion:outputText.xhtml,OutputTextModelBean.java|right-to-left:outputText.xhtml
 output_alloy_outputTooltip=general:outputTooltip.xhtml
 panel_alloy_accordion=general:accordion.xhtml|data-model:accordion.xhtml,AccordionModelBean.java|multiple:accordion.xhtml|selected-tab:accordion.xhtml,AccordionBackingBean.java|server-events:accordion.xhtml,AccordionBackingBean.java
