--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -17,6 +17,7 @@ misc_alloy_body=general:webappBody.xhtml,portletBody.xhtml
 misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 misc_alloy_importConstants=general:importConstants.xhtml,ClassConstants.java,EnumConstants.java,InterfaceConstants.java
+misc_alloy_progressBar=general:progressBar.xhtml,ProgressBarBacking.java|client-side:progressBar.xhtml|server-events:progressBar.xhtml,ProgressBarBacking.java
 multimedia_alloy_audio=general:audio.xhtml
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
@@ -26,7 +27,6 @@ output_alloy_messages=general:messages.xhtml,MessageBackingBean.java
 output_alloy_outputFormat=general:outputFormat.xhtml
 output_alloy_outputLabel=general:outputLabel.xhtml,FieldBackingBean.java
 output_alloy_outputLink=general:outputLink.xhtml|conversion:outputLink.xhtml,OutputLinkModelBean.java,CountryGmapConverter.java
-output_alloy_outputProgress=general:outputProgress.xhtml
 output_alloy_outputRemainingChars=general:outputRemainingChars.xhtml,OutputRemainingCharsModelBean.java|default-value:outputRemainingChars.xhtml|max-length-events:outputRemainingChars.xhtml
 output_alloy_outputScript=general:outputScript.xhtml|resource:outputScript.xhtml,example.js|modules:outputScript.xhtml
 output_alloy_outputStylesheet=general:outputStylesheet.xhtml,example-resource.css
