--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -405,6 +405,7 @@ drop-down=Dropdown
 dynamic-tabs=Dynamic Tabs
 edit=Edit
 enable=Enable
+enter-your-search-here=Enter your search here
 error=Error
 escapexml-is-false=escapeXml <i>is false</i>
 escapexml-is-true=escapeXml <i>is true by default</i>
@@ -519,6 +520,7 @@ multiple=Multiple
 multiple-instances=Multiple Instances
 modules=Modules
 multiple-panes=Multiple Panes
+nav-bar=Nav Bar
 navigation=Navigation
 next=Next
 note=Note
@@ -548,13 +550,18 @@ portal-inputrichtext-dom-events=A subset of *DOM events* are supported including
 portal-inputrichtext-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. Supported values for the [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute are `blur`, `focus`, and `valueChange` (the default).
 portal-inputrichtext-validation=The [vdldoc:portal:inputRichText:minPlainTextChars] and [vdldoc:portal:inputRichText:maxPlainTextChars] attributes control the *minimum/maximum number of plain text characters*, meaning characters that do not include HTML tags such as `&lt;strong&gt;`, `&lt;em&gt;`, and `&lt;a href="..."&gt;`.
 portal-inputrichtext-validation-example-1=Specifying `minPlainTextChars="10"` and `maxPlainTextChars="144"`
+portal-inputsearch=[javadoc:com.liferay.faces.portal.component.inputsearch.InputSearch] is a [javadoc:javax.faces.component.UIInput] component that renders a text field and optional button for submitting search criteria.
+portal-inputsearch-general=<p>The [vdldoc:portal:inputSearch:value] attribute can be *bound to a model bean property* via EL.</p><p>The [vdldoc:portal:inputSearch:buttonLabel] attribute controls the label of the button.</p><p>The [vdldoc:portal:inputSearch:placeholder] attribute (HTML5-only) controls the text of the hint that appears in the text field before the user enters a value.</p>
+portal-inputsearch-instant-ajax=The component supports *instant Ajax* by simply adding an [vdldoc:f:ajax] child tag. The default event for [vdldoc:f:ajax] [vdldoc:f:ajax:event] attribute is `search` (when the search button is clicked).
+portal-inputsearch-nav-bar=When specified as a grand-child of [vdldoc:portal:navBar] and a child of [vdldoc:portal:navBarSearch], the *responsive* layout feature for small/mobile displays causes the text field to appear in a popup menu.
+portal-inputsearch-without-button=By specifying `showButton="false"`, the text field will appear by itself without a button.
 portal-nav=[javadoc:com.liferay.faces.portal.component.nav.Nav] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `&lt;ul&gt;...&lt;/ul&gt` (unordered) list. It is designed to be used in conjunction with [vdldoc:portal:navItem] child component tags.
 portal-nav-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render list items *dynamically* when the [vdldoc:portal:navItem] content is set via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:portal:navItem:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
 portal-nav-general=Child [vdldoc:portal:navItem] child component tags are rendered as `&lt;li&gt;...&lt;/li&gt;` (list item) elements.
 portal-nav-general-example-1=Default styling
 portal-nav-general-example-2=Specifying `styleClass="nav-list"` and list item hyperlinked icons
-portal-navbar=[javadoc:com.liferay.faces.portal.component.navbar.NavBar] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;...&lt;/div&gt;` element. It is designed to be used in conjunction with [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
-portal-navbar-general=Specify a *navigation-bar* of links using [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags. The component has a responsive layout feature for small/mobile displays that causes the *grand-child* [vdldoc:alloy:navItem] links to be displayed in a popup menu. This feature is enabled by default when a *child* [vdldoc:alloy:nav] component tag has [vdldoc:portal:nav:collapsible]=`true` (the default).
+portal-navbar=<p>[javadoc:com.liferay.faces.portal.component.navbar.NavBar] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;...&lt;/div&gt;` element. It is designed to be used in conjunction with [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.</p><p>The component has a *responsive* layout feature for small/mobile displays that causes the *grand-child* [vdldoc:alloy:navItem] links to be displayed in a popup menu. This feature is enabled by default when a *child* [vdldoc:alloy:nav] component tag has [vdldoc:portal:nav:collapsible]=`true` (the default).</p>
+portal-navbar-general=Specify a *navigation-bar* of links using [vdldoc:portal:nav] and [vdldoc:portal:navItem] child component tags.
 portal-navbar-general-example-1=Responsive feature enabled for small/mobile displays
 portal-permissionsurl=[javadoc:com.liferay.faces.portal.component.permissionsurl.PermissionsURL] is a [javadoc:javax.faces.component.UIOutput] component that generates a URL pointing to the Liferay Portal Permissions UI. If the [vdldoc:portal:permissionsURL:var] attribute is present, the component introduces a variable into the EL. Otherwise, the URL is written to the response.
 portal-permissionsurl-general=Access the *Portlet Resource Permissions* by specifying the primary key of a portlet via the [vdldoc:portal:permissionsURL:resourcePrimKey] attribute, and optionally specifying [vdldoc:portal:permissionsURL:roleTypes] in order to control which roles are displayed in the Liferay Portal Permissions UI.
@@ -591,6 +598,7 @@ required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
 rowlevel=Row-Level
+search=Search
 select=Select
 selection=Selection
 selected-tab=Selected Tab
@@ -609,6 +617,7 @@ submit-and-re-render-field=Submit and Re-Render Field
 submit-and-re-render-form=Submit and Re-Render Form
 submit-and-re-render-page=Submit and Re-Render Page
 submit-non-faces-postback=Submit Non-Faces Postback
+submit-search=Submit Search
 success=Success
 text-field=Text Field
 text-from-title-attribute=Text from title attribute
@@ -671,5 +680,6 @@ vertical-layout=Vertical Layout
 warning=Warning
 when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
 which-of-the-following-dates-are-in-the-18th-century=Which of the following dates are in the 18th century?
-windowstate=Window State 
+windowstate=Window State
+without-button=Without Button
 wizard=Wizard
