--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -405,8 +405,6 @@ edit=Edit
 enable=Enable
 enter-your-search-here=Enter your search here
 error=Error
-escapexml-is-false=escapeXml <i>is false</i>
-escapexml-is-true=escapeXml <i>is true by default</i>
 example=Example
 expand-all=Expand All
 f-ajax=The JSF runtime includes the [vdldoc:f:ajax] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
@@ -534,11 +532,12 @@ password=Password
 pick=Pick
 please-consider-using=Please consider using
 portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
-portal-buttonrow-general=Use [vdldoc:portal:buttonRow] to contain a row of buttons in Liferay.
-portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag.
-portal-header-general=There are a few options when using the [vdldoc:portal:header] tag ...
-portal-header-general-example-1=When [vdldoc:portal:header:escapeXml] is false, markup is not escaped.  This is true by default. 
-portal-header-general-example-2=The [vdldoc:portal:header:backURL] and [vdldoc:portal:header:backLabel] attributes can be used to create a link and its label, respectively.
+portal-buttonrow-general=Buttons are arranged in a row by specifying [vdldoc:alloy:button] child tags.
+portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+portal-header-general=The component is used to display header text by specifying the [vdldoc:portal:header:title] attribute. It can also display a clickable *back icon*.
+portal-header-general-example-1=Specifying an internationalized key (provided by the portal) for the [vdldoc:portal:header:title] attribute.
+portal-header-general-example-2=Specifying an EL expression for the [vdldoc:portal:header:title] attribute.
+portal-header-general-example-3=Specifying the [vdldoc:portal:header:backLabel] and [vdldoc:portal:header:backURL] attributes to define the hyperlink for the back icon.
 portal-inputrichtext=[javadoc:com.liferay.faces.portal.component.inputrichtext.InputRichText] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing rich text.
 portal-inputrichtext-general=The general usage is to support authoring of rich text as *fragments of HTML*.
 portal-inputrichtext-bbcode=Authoring of *BBCode* rich text is supported by specifying the [vdldoc:portal:inputRichText:editorKey] attribute with a Liferay Portal *property key* that has a value of `ckeditor_bbcode`.
