--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -128,6 +128,7 @@ alloy-inputdate-min-max=*Minimum* and *maximum* dates can be specified via the [
 alloy-inputdate-min-max-example=Specifying `minDate=""` and `maxDate=""`
 alloy-inputdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:inputDate:panes] attribute (maximum of 3).
 alloy-inputdate-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`dateSelected` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.inputdate.InputDateEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:inputDate:eventListener] attribute.
+alloy-inputdate-validation=A custom validator can be specified via the [vdldoc:alloy:inputDate:validator] attribute.
 alloy-inputfile=[javadoc:com.liferay.faces.alloy.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads, instant-Ajax, preview, upload progress, and validation.
 alloy-input-file-benefits-description=since it works in *portlet and webapp* environments and also supports preview, upload progress, and validation.
 alloy-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback. 
@@ -184,6 +185,7 @@ alloy-inputtime-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdl
 alloy-inputtime-time-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:inputTime:timePattern] attribute. The syntax of the time pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-inputtime-time-pattern-example=Specifying `timePattern="hh:mm:ss a"`
 alloy-inputtime-step=The number of *seconds* between each selectable time can be specified via the [vdldoc:alloy:inputTime:step] attribute.
+alloy-inputtime-validation=A custom validator can be specified via the [vdldoc:alloy:inputTime:validator] attribute.
 alloy-link=[javadoc:com.liferay.faces.alloy.component.link.Link] is a [javadoc:javax.faces.component.UIOutcomeTarget] component that renders an `&lt;a&gt;` element (hyperlink). Since it extends [javadoc:javax.faces.component.html.HtmlLink], it supports all the features of [vdldoc:h:link].
 alloy-link-benefits-description=is intended to be used to render a hyperlink that *navigates* to other JSF views via HTTP GET, or perhaps to re-render the same view with different *view parameters* via [vdldoc:f:param] child tags.
 alloy-link-general=The text/content of the hyperlink can be specified via the [vdldoc:alloy:link:value] of the component or by specifying child components. Setting [vdldoc:alloy:link:includeViewParams]=`true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
@@ -492,6 +494,7 @@ in-store=In-Store
 info=Info
 input=Input
 instant-ajax=Instant Ajax
+invalid-selection=Invalid Selection
 inverse=Inverse
 jstl=JSTL
 large=Large
@@ -502,6 +505,7 @@ link=Link
 link-to-a-map-of=Link to a map of
 locale-from-el=locale from EL
 localization=Localization
+lunchtime-is-not-valid=Lunchtime is not valid
 max-length-events=Max Length Events
 menu=Menu
 message-styling=Message Styling
@@ -532,6 +536,7 @@ parameter-value=Parameter Value
 password=Password
 pick=Pick
 please-consider-using=Please consider using
+please-choose-a-meeting-time-lunchtime-12-1-is-not-valid=Please choose a meeting time (Lunchtime from 12pm-1pm is not valid)
 portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 portal-buttonrow-general=Buttons are arranged in a row by specifying [vdldoc:alloy:button] child tags.
 portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
@@ -591,11 +596,13 @@ purchases=Purchases
 rating=Rating
 redisplay=Redisplay
 rendered=Rendered
+request-a-day-off-weekdays-only=Request a day off (weekdays only)
 required=Required
 required-message=This is a required field
 resource=Resource
 right-to-left=Right-To-Left
 rowlevel=Row-Level
+sat-and-sun-are-not-valid=Saturday and Sunday are not valid
 search=Search
 select=Select
 selection=Selection
