--- a/demos/bridge/jsf1-jsp-portlet/src/main/resources/log4j.properties
+++ b/demos/bridge/jsf1-jsp-portlet/src/main/resources/log4j.properties
@@ -2,44 +2,35 @@ log4j.rootLogger=INFO, R
 log4j.appender.R=org.apache.log4j.ConsoleAppender 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout 
 log4j.appender.R.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}:%L] %m%n
-log4j.logger.com.liferay.faces.bridge.BridgePhaseActionImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseEventImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseRenderImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseResourceImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseActionImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseEventImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseRenderImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseResourceImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.event.internal.PostConstructApplicationConfigListener=DEBUG
-log4j.logger.com.liferay.faces.bridge.bean.BeanManagerMojarraImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.bean.MojarraInjectionProvider=DEBUG
-log4j.logger.com.liferay.faces.bridge.config.BridgeConfigImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.BridgeNavigationHandlerImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.ResourceHandlerImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.ResourceImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.ViewHandlerImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.application.view.BridgeAfterViewContentResponse=TRACE
-log4j.logger.com.liferay.faces.bridge.application.view.BridgeWriteBehindResponseMimeImpl=TRACE
-log4j.logger.com.liferay.faces.bridge.application.view.ViewDeclarationLanguageJspImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.component.UIViewRootImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.config.BridgeConfigImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.config.ServletMappingImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.container.PortletContainerImpl=DEBUG
-#log4j.logger.com.liferay.faces.bridge.container.liferay.LiferayURLUtil=TRACE
-log4j.logger.com.liferay.faces.bridge.container.liferay.PortletContainerLiferayImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.BridgeContextImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.ExternalContextImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.FacesViewImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.map.RequestHeaderMap=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.map.RequestParameterMapImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.context.map.RequestParameterMapMultiPartImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.filter.HttpServletResponseAdapter=TRACE
-log4j.logger.com.liferay.faces.bridge.lifecycle.LifecycleIncongruityManager=DEBUG
-log4j.logger.com.liferay.faces.bridge.scope.BridgeRequestScopeImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.scope.BridgeRequestScopeManagerImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.BodyRendererBridgeImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.HeadPhaseListener=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.HeadRendererBridgeImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.HeadResponseWriterImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.HeadResponseWriterLiferayImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.ResourceRendererBridgeImpl=TRACE
+log4j.logger.com.liferay.faces.bridge.bean.internal.BeanManagerMojarraImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.bean.internal.MojarraInjectionProvider=DEBUG
+log4j.logger.com.liferay.faces.bridge.config.internal.BridgeConfigImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.application.internal.BridgeNavigationHandlerImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.application.internal.ResourceHandlerBridgeImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.application.internal.ResourceImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.application.internal.ViewHandlerImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.application.view.internal.BridgeAfterViewContentResponse=TRACE
+log4j.logger.com.liferay.faces.bridge.application.view.internal.BridgeWriteBehindResponseMimeImpl=TRACE
+log4j.logger.com.liferay.faces.bridge.application.view.internal.ViewDeclarationLanguageJspImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.config.internal.BridgeConfigImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.context.internal.BridgeContextImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.context.internal.ExternalContextImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.context.internal.FacesViewImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.context.map.internal.RequestHeaderMap=DEBUG
+log4j.logger.com.liferay.faces.bridge.filter.internal.HttpServletResponseAdapter=TRACE
+log4j.logger.com.liferay.faces.bridge.scope.internal.BridgeRequestScopeImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.scope.internal.BridgeRequestScopeManagerImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.BodyRendererBridgeImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.HeadPhaseListener=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.HeadRendererBridgeImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.HeadResponseWriterImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.HeadResponseWriterLiferayImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.renderkit.html_basic.internal.ResourceRendererBridgeImpl=TRACE
 log4j.logger.com.liferay.faces.bridge.servlet.BridgeSessionListener=DEBUG
-log4j.logger.com.liferay.faces.bridge.util.FacesRequest=DEBUG
 log4j.logger.com.liferay.faces.demos.bean.ApplicantBackingBean=DEBUG
 log4j.logger.com.liferay.faces.util.lifecycle.DebugPhaseListener=DEBUG
